# solana-supply-chain

./: .gitignore  README.md
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/components/: Button.tsx  Card.tsx  Map.tsx  ProductCard.tsx  QRCodeComponent.tsx  SectionLabel.tsx  TemperatureChart.tsx  WalletConnectionProvider.tsx
frontend/idl/: supply_chain.json
frontend/pages/: _app.tsx  index.tsx  register.tsx
frontend/pages/product/: [id].tsx
frontend/styles/: globals.css
program/: Anchor.toml  Cargo.toml  package-lock.json  package.json
program/.cargo/: config.toml
program/migrations/: deploy.js
program/programs/supply-chain/: Cargo.toml
program/programs/supply-chain/src/: lib.rs
program/scripts/: sync-program-id.js
program/tests/: supply-chain.ts
simulator/: requirements.txt  route.json  simulator.py
